force-app/main/default/objects/LLC_BI__Loan_Compliance__c/LLC_BI__Loan_Compliance__c.object-meta.xml
<CustomObject>
    <description>The Loan Compliance object holds data necessary to ensure compliance for a loan.</description>
    <label>Loan Compliance</label>
    <nameField>
        <displayFormat>LCO-{000000}</displayFormat>
        <label>Loan Compliance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Compliances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>