force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Amount_Financed__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount_Financed__c</fullName>
    <description>The system automatically populates this field to display the Regulation Z amount of credit provided to the borrower or on the borrower’s behalf. By default, this field is blank.</description>
    <inlineHelpText>This field displays the amount of credit provided to the borrower.</inlineHelpText>
    <label>Amount Financed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>