force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Change_of_Circumstance_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Change_of_Circumstance_Date__c</fullName>
    <description>The system automatically populates this optional field to indicate the date of the acceptable change of circumstance that causes a tolerance breach. By default, this field is blank.</description>
    <inlineHelpText>Enter the date for the change of circumstance.</inlineHelpText>
    <label>Change of Circumstance Date</label>
    <type>Date</type>
</CustomField>