force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Closing_Disclosure_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Closing_Disclosure_Delivery_Method__c</fullName>
    <description>Users populate this optional picklist field to indicate the delivery method the financial institution uses to provide the closing disclosure to the applicant. By default, this field is blank.</description>
    <inlineHelpText>Select the closing disclosure delivery method for the loan.</inlineHelpText>
    <label>Closing Disclosure Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>In-person</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>