force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Date_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Date_Action_Taken__c</fullName>
    <description>This is a required field.  This field indicates the settlement or closing date for originations. For applications that did not result in an origination, the date when the action was taken or when the notice was sent to the applicant is entered. For an application that was expressly withdrawn by the applicant, either the date shown on the applicant&apos;s letter or the date you received the letter or notice is reported. For loans that an institution purchased, the date of purchase is entered.</description>
    <inlineHelpText>Select the date that the action was taken. For example the date the loan was originated, Application denied, Purchased Loan, etc.</inlineHelpText>
    <label>Date Action Taken</label>
    <type>Date</type>
</CustomField>