force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Date_Application_Received__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Date_Application_Received__c</fullName>
    <description>This is a required field.  This field indicates the date the application was received or the date on the application form.</description>
    <inlineHelpText>If the date the application was received does not apply to the loan, please do not select a date.</inlineHelpText>
    <label>Date Application Received</label>
    <type>Date</type>
</CustomField>