force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HCM_Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HCM_Calculation_Date__c</fullName>
    <description>The system automatically populates this field to display the date compliance calculations for High-Cost Mortgage are completed. By default, this field is blank.</description>
    <inlineHelpText>This field displays the HCM calculation date.</inlineHelpText>
    <label>HCM Calculation Date</label>
    <type>Date</type>
</CustomField>