force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Amount__c</fullName>
    <description>This is a required field. This field indicates the dollar amount granted or requested. The process that creates the extract file will convert this to thousands if required.</description>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>