force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_AUS_Other_Result_Text__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_AUS_Other_Result_Text__c</fullName>
    <description>This field indicates in text the specific other AUS result(s) if Code 16 (Other) is selected in an Automated Underwriting System Result field.</description>
    <inlineHelpText>If &quot;Other&quot; is selected as one of the Automated Underwriting Systems Results, this field allows you to specify the results from the system.</inlineHelpText>
    <label>Other AUS Result Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>