force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Combined_LTV__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Combined_LTV__c</fullName>
    <description>This is a required field.  This field indicates the percentage, the ratio of the total amount of debt secured by the property to the value of the property relied on in making the credit decision.</description>
    <inlineHelpText>Use decimal places only if the ratio relied upon uses decimal places.</inlineHelpText>
    <label>Combined Loan-to-Value Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>