force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Denial_Reason_Text__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Denial_Reason_Text__c</fullName>
    <description>This field specifies in text the specific other reason(s) for denial if Code 9 (Other) is selected in any Reason for Denial field.</description>
    <inlineHelpText>You may enter up to 50 characters to list the other denial reason.</inlineHelpText>
    <label>Other Denial Reason Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>