force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_HOEPA_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_HOEPA_Status__c</fullName>
    <description>This is a required field.  This field indicates whether the loan is a high-cost mortgage under the Home Ownership and Equity Protection Act (HOEPA).</description>
    <label>HOEPA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>