force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Legal_Entity_Identifier__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Legal_Entity_Identifier__c</fullName>
    <description>This is a required field. This field is the identifier issued to the financial institution (FI) by a utility endorsed by the Global LEI Foundation or LEI Regulatory Oversight Committee.</description>
    <label>Legal Entity Identifier (LEI)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>