force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Lender_Credits__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Lender_Credits__c</fullName>
    <description>This field indicates in dollars, the amount of lender credits.</description>
    <inlineHelpText>If no lender credits were provided, leave this field blank.</inlineHelpText>
    <label>Lender Credits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>