force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Loan_Purpose__c</fullName>
    <description>This is a required field.  This field indicates whether the transaction is for home purchase, home improvement, refinancing, cash-out refinancing, or another purpose.</description>
    <label>Purpose of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>31</fullName>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>