force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Loan_Type__c</fullName>
    <description>This is a required field.  This field indicates whether the loan or application is insured by the Federal Housing Administration, guaranteed by the Veterans Administration, Rural Housing Service, or Farm Service Agency.</description>
    <label>Type of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>