force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Negative_Amortization__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Negative_Amortization__c</fullName>
    <description>This is a required field.  This field indicates whether the contractual terms include, or would have included, a term that would cause the covered loan to be a negative amortization loan.</description>
    <label>Negative Amortization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>