force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Preapproval_Requested__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Preapproval_Requested__c</fullName>
    <description>This is a required field.  This field indicates whether the transaction involved a preapproval request for a home purchase loan under a preapproval program.</description>
    <label>Request for Preapproval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>