force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Property_Securing_Affordable_Units__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Property_Securing_Affordable_Units__c</fullName>
    <description>This is a required field.  This field indicates the number of individual dwelling units related to any multifamily dwelling property securing the covered loan or, in the case of an application, proposed to secure the covered loan, that are income-restricted pursuant to Federal, State, or local affordable housing programs.</description>
    <label>Multifamily Affordable Units</label>
    <length>6</length>
    <type>Text</type>
</CustomField>