force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Property_Securing_Census_Tract__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Property_Securing_Census_Tract__c</fullName>
    <description>This is a required field.  This field indicates the 11 digit census tract number as defined by the U.S. Census Bureau of the property securing the loan (or proposed to secure a loan)</description>
    <inlineHelpText>Do not use decimals.  If the address of the property is unknown, please enter &apos;NA&apos;.</inlineHelpText>
    <label>Property Securing Census Tract</label>
    <length>11</length>
    <type>Text</type>
</CustomField>