force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Property_Securing_Mfd_Home_Int__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Property_Securing_Mfd_Home_Int__c</fullName>
    <description>This is a required field.  This field indicates the applicant&apos;s or borrower&apos;s land property interest in the land on which a manufactured home is, or will be, located.</description>
    <label>Property Securing Manufactured Home Int</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>