force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Property_Securing_MSA_MD_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Property_Securing_MSA_MD_Number__c</fullName>
    <description>This is a required field.  This field indicated the five-digit metropolitan statistical area (MSA) number or, if available, the five-digit metropolitan division (MD) number.</description>
    <inlineHelpText>If the five-digit metropolitan statistical area (MSA) number or the five-digit metropolitan division (MD) number is not applicable, enter NA.</inlineHelpText>
    <label>Five Digit MSA/MD Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>