force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Property_Securing_Property_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Property_Securing_Property_Value__c</fullName>
    <description>This is a required field. This field indicates in dollars, the value of the property securing the covered loan or, in the case of an application, proposed to secure the covered loan, relied on in making the credit decision.</description>
    <label>Property Securing Property Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>