force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Property_Securing_State__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Property_Securing_State__c</fullName>
    <description>This is a required field.  This field indicates the State of the property securing the loan (or proposed to secure a loan)</description>
    <inlineHelpText>If the address of the property is unknown, please enter &apos;NA&apos;.</inlineHelpText>
    <label>Property Securing State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>