force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Property_Securing_Total_Units__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Property_Securing_Total_Units__c</fullName>
    <description>This is a required field.  This field indicates the number of individual dwelling units related to the property securing the covered loan or, in the case of an application, proposed to secure the covered loan.</description>
    <label>Property Securing Total Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>