force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Submission_Of_Application__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Submission_Of_Application__c</fullName>
    <description>This is a required field.  This field indicates whether the applicant or borrower submitted the application directly to your institution.</description>
    <label>Submission of Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>