force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Total_Loan_Costs__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Total_Loan_Costs__c</fullName>
    <description>This is a required field.  This field indicates in dollars, the amount of total loan costs.</description>
    <label>Total Loan Costs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>