force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__HMDA_Universal_Loan_Identifier__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HMDA_Universal_Loan_Identifier__c</fullName>
    <description>This is a required field.  This field is the identifier used to identify and retrieve a loan or application that contains the FI&apos;s LEI, an internally generated sequence of characters, and a check digit</description>
    <inlineHelpText>The ULI begins with the financial institution&apos;s Legal Entity Identifier.  Follows the Legal Entity Identifier with up to 23 additional characters to identify the covered loan or application.  Ends with a two-character check digit that is calculated using</inlineHelpText>
    <label>Universal Loan Identifier (ULI)</label>
    <length>45</length>
    <type>Text</type>
</CustomField>